test/bad/classes/type03.px

class A def
    Int x

class B(A) def
    Int y

b = [B()]
b = [A()]
